--- a/AUTHORS
+++ b/AUTHORS
@@ -5,3 +5,5 @@ Michał Moskal (@mmoskal)
 Raphael Gault (@raphaelgault)
 Sam Kent (@microbit-sam)
 Jonny Auston (@jaustin)
+Non-profit organization mruby Forum
+Hiroshi Mimaki (@mimaki)
